WIP stopping columns from wrapping.

--- a/css/styles.css
+++ b/css/styles.css
@@ -13,13 +13,14 @@
 
 @media (min-width: 768px) {
   .display-1 {
-    font-size: 10rem;
+    
   }
 }
 
 .body {
   background-color: rgb(205, 234, 243);
   margin: 2%;
+  font-size: 1em;
 }
 
 #img {
@@ -31,6 +32,7 @@
 
 .aboutColumns{
   columns:3;
+  
 }
 
 .aboutMe{
